--- a/public/404.html
+++ b/public/404.html
@@ -63,7 +63,7 @@
 
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-465407-4"></script>
 
-<script defer src="https://www.adrianmoreno.info/js/analytics.min.js"></script>
+<script defer src="https://hantianzhao.info/js/analytics.min.js"></script>
 
 
 
@@ -88,7 +88,7 @@
   <div class="container rad-fade-in">
     <nav class="navbar navbar-expand-lg navbar-light p-0">
       <div class="container-fluid">
-        <a class="navbar-brand mx-auto" href="https://www.adrianmoreno.info">
+        <a class="navbar-brand mx-auto" href="https://hantianzhao.info">
           <span>Cool</span>
           <span>Name</span>
         </a>
@@ -106,7 +106,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-lg-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="https://www.adrianmoreno.info">HOME</a>
+              <a class="nav-link active" href="https://hantianzhao.info">HOME</a>
             </li>
             
             <li class="nav-item">
@@ -148,7 +148,7 @@
         <p>
           Sorry, but the page you were looking for could not be found.
         </p>
-        <a href="https://www.adrianmoreno.info" class="btn btn-primary">Back to homepage</a>
+        <a href="https://hantianzhao.info" class="btn btn-primary">Back to homepage</a>
       </div>
     </section>
 
@@ -162,7 +162,7 @@
     <div class="footer__links">
       <ul class="navbar-nav ">
         <li class="nav-item">
-            <a class="nav-link" href="https://www.adrianmoreno.info">🏠 HOME</a>
+            <a class="nav-link" href="https://hantianzhao.info">🏠 HOME</a>
         </li>
         
         <li class="nav-item">
@@ -185,7 +185,7 @@
   </div>
 </footer>
  
-    <script src='https://www.adrianmoreno.info/js/library/lozad.min.js'></script>
+    <script src='https://hantianzhao.info/js/library/lozad.min.js'></script>
 <script>
   window.addEventListener("load", function() {
     var observer = window.lozad(".lozad", {
@@ -195,11 +195,11 @@
     observer.observe();
   });
 </script>
-<script defer src='https://www.adrianmoreno.info/js/rad-animations.js'></script>
-<script defer src='https://www.adrianmoreno.info/js/library/smooth-scroll.polyfills.min.js'></script>
-<script defer src='https://www.adrianmoreno.info/js/sticky-header.js'></script>
-<script defer src='https://www.adrianmoreno.info/js/smooth-scroll-init.js'></script>
-<script defer src='https://www.adrianmoreno.info/js/library/bootstrap.min.js'></script>
+<script defer src='https://hantianzhao.info/js/rad-animations.js'></script>
+<script defer src='https://hantianzhao.info/js/library/smooth-scroll.polyfills.min.js'></script>
+<script defer src='https://hantianzhao.info/js/sticky-header.js'></script>
+<script defer src='https://hantianzhao.info/js/smooth-scroll-init.js'></script>
+<script defer src='https://hantianzhao.info/js/library/bootstrap.min.js'></script>
 
   </body>
 </html>
